# UniHack2026

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  manifest.json  pyproject.toml
.github/workflows/: lint.yaml
site/: app.py  celery_app.py  constants.py  index.py
site/api/: api.py
site/api/model/: trip.py
site/blueprints/: collate_data.py
site/database/: base.py  db_cmds.py  point.py  sqlite.db  sqlite.db.copy2  sqlite.db.old  sqlite.db.old2  trip.py
site/database/trip/: analysis.py  conditions.py  point.py  trip.py
site/log_book/: log_book.py
site/static/css/: bootstrap.min.css  style.css
site/static/css/log_book/: new.css
site/static/js/: geolocation.js  log.js  sw.js  translate_time.js
site/static/js/log_book/: new.js  testing_logbook.js  trip.js
site/static/js/map/: center_on_user.js
site/templates/: base.html  index.html
site/templates/log_book/: index.html  new.html  trip.html
site/trip_analyser/: analyser.py  road_analyser.py  trip_suburbs.py  trip_time.py  trip_traffic.py  trip_weather.py  util.py
site/utils/: road_classify.py  trip_time.py  weather_condition.py
